# chinese-fingerprint-based-device

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aosyw.overlay  config.json  hardware_connection.txt  prj.conf  test_cases.txt
drivers/: Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/m080r/: CMakeLists.txt  Kconfig  m080r.c  m080r.h
dts/bindings/: fingerprint_sensor.yaml
dts/bindings/sensor/: chinese,m080r.yaml
inc/: fingerprint_sensor.h
m080r_driver_module/: Kconfig
m080r_driver_module/drivers/: Kconfig
m080r_driver_module/drivers/sensor/: CMakeLists.txt  Kconfig
m080r_driver_module/drivers/sensor/m080r/: Kconfig  m080r.c  m080r.h
m080r_driver_module/dts/bindings/sensor/: chinese,m080r.yaml
m080r_example_app/: CMakeLists.txt  aosyw.overlay  hardware_connection.txt  prj.conf
m080r_example_app/src/: main.c
m080r_example_app/src/old_attempts/: main.c
m080r_example_app_test_case1/: CMakeLists.txt  hardware_connection.txt
m080r_example_app_test_case1/src/: main.c
m080r_example_app_test_case2/: CMakeLists.txt  aosyw.overlay
m080r_example_app_test_case2/src/: main.c
m080r_example_app_test_case2/src/old_attempts/: fingerprint_sensor.c
m080r_example_app_test_case3/: prj.conf
m080r_example_app_test_case3/src/: main.c
m080r_example_app_test_case4/: .gitignore  README.md
m080r_example_app_test_case4/src/: main.c
src/: fingerprint_sensor.c  main.c
